<resources>
    <string name="app_name">Twitter Clone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="twitter_clone">Twitter Clone</string>
    <string name="tweet">Tweet</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
</resources>